5.0.7
- Bugfix: The XML analysis does not recognise a broken XML string.
- Bugfix: The scalar analysis does not return the output from the
  start event when there is no meta to display.
- Bugfix: The serialized string analysis was too strict to detect
  all possible candidates.

5.0.6
- Added the handling of type casting to the regex getter analysis.
- Bugfix: Removed some self:: references.
- Bugfix: Better looking exclamation mark for the SmokyGrey skin.
- Bugfix: The dragging of the kreXX output window may not work under
  certain circumstances.

5.0.5
- Added formatting for float values for better readability.
- Added an event to the output of the inline js and css.
- Bugfix: Make sure that the JS only executes once.

5.0.4
- Change: Made implicitly nullable parameter declarations explicitly nullable.
- Bugfix: Catch a Throwable in the ProcessInteger.
- Bugfix: Better Base64 detection.
- Bugfix: The error handler was not removed in the file reader.
- Bugfix: The no-js feedback handles CSP headers.
- Bugfix: The translations are located in a div in the header.
- Bugfix: Missing BOM encoding in the code generation.

5.0.3
- Bugfix: Possible warning in file reader.
- Bugfix: Possible fatals in the file reader.
- Bugfix: Do not use the $GLOBALS recursion marker in PHP 8.1
  or higher.

5.0.2
- Added the possibility for plugins to overwrite the factory
  settings.
- Change: Removed deprecated code.
- Change: Some deprecations.
- Bugfix: The event
  'Brainworxx\Krexx\Analyse\Callback\Analyse\Objects\DebugMethods::callMe::start'
  was called too late.
- Bugfix: Make use of the internal error callback in the string
  encoding class.
- Bugfix: Add the missing "Line no." to the translation.
- Bugfix: Added missing return types to the return type whitelist
  in the ReturnType comment analysis.
- Bugfix: Added missing types to the blacklist of none namespaces
  declaration types.
- Bugfix: Added missing translations for the setting.